--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <main class="main">
-      <header class="header">
-        <div class="header">
-          <span class="cont-count"> 4000</span>
-          <span> contributions in the last year</span>
-        </div>
-      </header>
-      <div class="table-container">
-        <table class="table">
-          <tr>
-            <td colspan="4">Jan</td>
-            <td colspan="4">Feb</td>
-            <td colspan="4">Mar</td>
-          </tr>
-        </table>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <main class="main">
+    <header class="header">
+      <div class="header">
+        <span class="cont-count"> 4000</span>
+        <span> contributions in the last year</span>
       </div>
-    </main>
-    <script src="index.js"></script>
-  </body>
+    </header>
+    <div class="table-container" id="tableWrapper">
+
+    </div>
+  </main>
+  <script src="https://unpkg.com/moment">
+  </script>
+
+  <script src="index.js"></script>
+</body>
+
 </html>
