--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="index.css" />
-</head>
+  <body>
+    <main class="main">
+      <header class="header">
+        <div class="header">
+          <span class="cont-count" id="activeCellsCount"></span>
+          <span> contributions in the last year</span>
+        </div>
+      </header>
+      <div class="table-container" id="tableWrapper"></div>
+      <div class="colorPickerWrapper" id="colorPickerwrapper">
+        <span>Less</span>
+        <div class="colorOption" id="col1"></div>
+        <div class="colorOption" id="col2"></div>
+        <div class="colorOption" id="col3"></div>
+        <div class="colorOption" id="col4"></div>
+        <div class="colorOption" id="col5"></div>
 
-<body>
-  <main class="main">
-    <header class="header">
-      <div class="header">
-        <span class="cont-count"> 4000</span>
-        <span> contributions in the last year</span>
+        <span>More</span>
       </div>
-    </header>
-    <div class="table-container" id="tableWrapper">
+    </main>
+    <script src="https://unpkg.com/moment"></script>
 
-    </div>
-  </main>
-  <script src="https://unpkg.com/moment">
-  </script>
-
-  <script src="index.js"></script>
-</body>
-
+    <script src="index.js"></script>
+  </body>
 </html>
