--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="colorOption" id="col2"></div>
         <div class="colorOption" id="col3"></div>
         <div class="colorOption" id="col4"></div>
-        <div class="colorOption" id="col5"></div>
+        <div class="colorOption selected" id="col5"></div>
 
         <span>More</span>
       </div>
