really ready for going live

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Github acticity Clone</title>
   <link rel="stylesheet" href="index.css" />
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -13,8 +17,10 @@
     <div class="header">
       <h1>Github profile Activity clone</h1>
       <div class="siteInfoWrapper">
-        <span class="siteInfo">Made by <a href="" target="_blank" class="externalLink">Mohamed Atta</a></span>
-        <span class="siteInfo">Project code <a href="" target="_blank" class="externalLink">here</a></span>
+        <span class="siteInfo">Made by <a href="https://mohamedatta.netlify.app/" target="_blank"
+            class="externalLink">Mohamed Atta</a></span>
+        <span class="siteInfo">Project code <a href="https://github.com/mohmed98/githubActicity" target="_blank"
+            class="externalLink">here</a></span>
       </div>
 
     </div>
